[tool.poetry]
name = "dkrk"
version = "0.1.0"
description = "Calculations for Danish Real Estate Loans"
authors = ["matkvist <bejsebakkevej@hotmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
plotly = "^5.17.0"
pandas = "2.0.3"
notebook = "^7.0.5"

[tool.poetry.dev-dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
